syntax = "proto3";

package users;

import "google/protobuf/duration.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/field_mask.proto";
import "google/protobuf/timestamp.proto";

import "validate/validate.proto";

import "core.proto";

// User Service - User CRUD, avatars, admin functions
service UserService {
  // =========================================================================
  // User Management
  // =========================================================================

  // Load user info (streaming)
  rpc ListUsersInfo(ListUsersRequest) returns (stream UserInfo);

  // Load users (streaming)
  rpc ListUsers(ListUsersRequest) returns (stream User);
  // Create a new user
  rpc CreateUser(CreateUserRequest) returns (User);
  // Update user
  rpc UpdateUser(UpdateUserRequest) returns (User);

  // Set password (admin only - bypasses current password requirement)
  // For user self-service password change, use AuthService.ChangePassword
  rpc SetPassword(SetPasswordRequest) returns (google.protobuf.Empty);

  // =========================================================================
  // Avatar Management
  // =========================================================================

  // Get presigned URL for avatar upload
  rpc GetAvatarUploadUrl(GetAvatarUploadUrlRequest) returns (GetAvatarUploadUrlResponse);

  // Confirm avatar upload completed
  rpc ConfirmAvatarUpload(ConfirmAvatarUploadRequest) returns (google.protobuf.Empty);

  // Delete user avatar
  rpc DeleteAvatar(DeleteAvatarRequest) returns (google.protobuf.Empty);
}

// =============================================================================
// User
// =============================================================================

message UserInfo {
  core.UUID       id         = 1;
  string          name       = 2;
  string          email      = 3;
  string          phone      = 4;
  core.UserRole   role       = 5;
  core.UserStatus status     = 6;
  string          avatar_url = 7;
  string          locale     = 8;
  string          timezone   = 9;
}

message User {
  core.UUID       id             = 1;
  string          name           = 2;
  string          email          = 3;
  string          phone          = 4;
  core.UserRole   role           = 5;
  core.UserStatus status         = 6;
  bool            email_verified = 7;
  bool            phone_verified = 8;
  bool            mfa_enabled    = 9;
  bool            has_password   = 10;
  // Linked OAuth providers
  // repeated OAuthProvider linked_providers = 11;
  string                    avatar_url = 11;
  string                    locale     = 12;
  string                    timezone   = 13;
  google.protobuf.Timestamp created_at = 14;
  google.protobuf.Timestamp updated_at = 15;
}

// =============================================================================
// Queries
// =============================================================================

message ListUsersRequest {
  // Impersonated user id (admin only)
  core.UUID user_id = 1;

  // Optional: filter by specific user IDs; if empty, load all users
  repeated core.UUID       user_ids   = 2;
  repeated core.UserStatus statuses   = 3;
  repeated core.UserRole   roles      = 4;
  string                   query      = 5 [ (validate.rules).string.max_len = 255 ];
  int32                    page_size  = 6 [ (validate.rules).int32 = {gte : 0, lte : 1000} ];
  string                   page_token = 7;
}

// =============================================================================
/// Management
// =============================================================================

message CreateUserRequest {
  // Display name
  string name = 1 [ (validate.rules).string = {min_len : 1, max_len : 255} ];
  // Email (optional if phone is provided)
  string email = 2 [ (validate.rules).string.max_len = 254 ];
  // Phone in E.164 format (optional if email is provided)
  string phone = 3 [ (validate.rules).string.max_len = 16 ];
  // Password (optional for OAuth-only accounts)
  string password = 4 [ (validate.rules).string.max_len = 128 ];
  // User role
  core.UserRole role = 5;
  // Locale (BCP 47)
  string locale = 6 [ (validate.rules).string.max_len = 35 ];
  // Timezone (IANA)
  string timezone = 7 [ (validate.rules).string.max_len = 64 ];
}

message UpdateUserRequest {
  core.UUID                 user_id     = 1 [ (validate.rules).message.required = true ];
  google.protobuf.FieldMask update_mask = 2;
  optional string           name        = 3 [ (validate.rules).string.max_len = 255 ];
  optional string           email       = 4 [ (validate.rules).string.max_len = 254 ];
  optional string           phone       = 5 [ (validate.rules).string.max_len = 16 ];
  optional core.UserRole    role        = 6;
  optional core.UserStatus  status      = 7; // Account status (admin only)
  optional string           locale      = 8 [ (validate.rules).string.max_len = 35 ];
  optional string           timezone    = 9 [ (validate.rules).string.max_len = 64 ];
}

message SetPasswordRequest {
  core.UUID user_id  = 1 [ (validate.rules).message.required = true ];
  string    password = 2
  [ (validate.rules).string = {min_len : 8, max_len : 128} ];
}

// =============================================================================
/// Avatar
// =============================================================================

// Request for presigned upload URL
message GetAvatarUploadUrlRequest {
  core.UUID user_id      = 1 [ (validate.rules).message.required = true ];
  string content_type = 2 [
    (validate.rules).string = {in : [ "image/jpeg", "image/png", "image/webp" ]}
  ];
  uint64 content_size = 3
  [ (validate.rules).uint64 = {gt : 0, lte : 10485760} ];
}

// Response with presigned URL for direct S3 upload
message GetAvatarUploadUrlResponse {
  // Presigned PUT URL for S3
  string upload_url = 1;
  // URL expiration in seconds
  google.protobuf.Duration expires_in = 2;
}

// Confirm avatar upload completed
message ConfirmAvatarUploadRequest {
  core.UUID user_id = 1 [ (validate.rules).message.required = true ];
}

message DeleteAvatarRequest {
  core.UUID user_id = 1 [ (validate.rules).message.required = true ];
}
